tests/conformance/valid/page_coordinate_document.plk
P1 page_coordinate_document () => R0[:32.16]
6[:32.16] => Z1[:32.16]
8[:32.16] => Z2[:32.16]
PAGE
[10,20] V|1 2 0
[11,20] S|32.16 32.16 32.16
[12,20] |A + B => R
ENDPAGE
R0[:32.16] => R0[:32.16]
END
